--- a/src/components/task2/Trello.css
+++ b/src/components/task2/Trello.css
@@ -12,6 +12,6 @@ p {
     font-family: 'Ubuntu', sans-serif;
     background-color: #0c3157;
     color: white;
-    width: 81rem;
+    width: 100vw;
     margin: 0;
 }
